--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "apidoc": "apidoc -i src/ -o docs/"
   },
   "author": "MP",
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.18.0",
+    "apidoc": "^1.2.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "globals": "^15.14.0",
@@ -27,5 +29,14 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0"
+  },
+  "apidoc": {
+    "title": "My API docs",
+    "name": "My API docs",
+    "url": "https://example.com/api/v1",
+    "order": [
+      "Authentication",
+      "User"
+    ]
   }
 }
