--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.12.0"
+    "mysql2": "^3.12.0",
+    "node-fetch": "^3.3.2",
+    "uuid": "^11.1.0"
   },
   "apidoc": {
     "title": "My API docs",
