--- a/db/.env.sample
+++ b/db/.env.sample
@@ -1,6 +1,12 @@
 DB_HOST=
 DB_USER=
-USER_PW=
+DB_PASSWORD=
 DB_NAME=
+DB_PORT=
 JWT_SECRET=
 JWT_EXPIRES_IN=
+KUBIOS_CLIENT_ID=
+KUBIOS_LOGIN_URL=
+KUBIOS_REDIRECT_URI=
+KUBIOS_API_URI=
+KUBIOS_USER_AGENT=
